--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <title>WEB 2</title>
-<link href="./index_files/web2styles.css" rel="stylesheet" type="text/css">
+<link href="web2styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
